qmsystem2 (1.1.2) unstable; urgency=low

  [Yang Yang]
  * Remove getTZName() from time-test, which is deprecated

  [Matias Muhonen]
  * Improve the documentation of the main page (Fixes: NB#235447)

 -- Yang Yang <ext-yang.25.yang@nokia.com>  Tue, 15 Mar 2011 13:50:19 +0200

qmsystem2 (1.1.1) unstable; urgency=low

  [Shenghua Liu]
  * Improve QmSensor API documentation

  [Matias Muhonen]
  * Fix a crash in QmTime (Fixes: NB#230333)  

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 10 Mar 2011 14:21:28 +0200

qmsystem2 (1.1.0) unstable; urgency=low

  [Matias Muhonen]
  * Fix the heartbeat test
  * Fix compilation under GCC 4.5 (Fixes: NB#234925)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 7 Mar 2011 09:39:17 +0200

qmsystem2 (1.0.16) unstable; urgency=low

  [Yang Yang]
  * Add test mount options to manual-usbmode-test

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 3 Mar 2011 12:15:57 +0200

qmsystem2 (1.0.15) unstable; urgency=low

  [Matti Halme]
  * QmBattery: Fixed a minutes/seconds conversion bug.
  * Fixes: NB#231716 - QmSystem2 uses incorrect build dependency.

  [Sirpa Tahkamo]
  * Edited documentation for consistency

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 28 Feb 2011 09:09:44 +0200

qmsystem2 (1.0.14) unstable; urgency=low

  [Matti Halme]
  * Utilize the use time daemon in talk/active/idle queries.

  [Ilya Dogolazky]
  * Fixes: NB#198141 - QmTime produces unnecessary D-Bus traffic
  * Fixes: NB#201997 - QmTime::isOperatorTimeAccessible() returns false, even if NITZ usage is not disabled by customization
  * Fixes: NB#202025 - QmTime::getRemoteTime sometimes produce random results
  * Fixes: NB#202034 - QmTime::getRemoteTime is not calling tzset() after restoring empty TZ
  * Fixes: NB#203406 - there is no way to get default time zone via qmsystem library
  * Fixes: NB#204558 - QmTime is never signalling "setting only changed" (unless only the 12/24 flag is changed)
